--- a/kr-example/index.html
+++ b/kr-example/index.html
@@ -142,13 +142,14 @@ predicted_sum(17) :- first_digit(8), second_digit(9).
 predicted_sum(18) :- first_digit(9), second_digit(9).
 </pre>
             <pre id="cnf">
-predicted_sum(8)</pre>
+predicted_sum(8)
+first_digit(3) second_digit(6)</pre>
             <ul class="hlist">
               <li>
                 <select id="mode">
                   <option selected>answer sets</option>
                   <option>facet-inducing atoms</option>
-                  <option>uncertainty reductions</option>
+                  <option>significances</option>
                 </select>
               </li>
             <input type="button" id="run" value="enter" onclick="solve()"/>
