--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ a b ~c
                   <option>facet-inducing atoms</option>
                   <option>uncertainty reductions</option>
                   <option>conditional probabilities</option>
-                  <option>representative answer sets</option>
+                  <!--option>representative answer sets</option-->
                 </select>
               </li>
             <input type="button" id="run" value="enter" onclick="solve()"/>
